# yolov8s-pose-ncnn

./: CMakeLists.txt  README.md  parse-pose.cpp
model/: yolov8s-pose-opt-fp16.param
